RESOLVED FIXED83069
Web Inspector: CodeGeneratorInspector.py: switch FileSystem, Profiler and Worker domains to typed API
https://bugs.webkit.org/show_bug.cgi?id=83069
Summary Web Inspector: CodeGeneratorInspector.py: switch FileSystem, Profiler and Wor...
Peter Rybin
Reported 2012-04-03 14:16:12 PDT
Do not allow InspectorObject and other raw interfaces in FileSystem, Profiler and Worker domains anymore.
Attachments
Patch (5.23 KB, patch)
2012-04-03 14:20 PDT, Peter Rybin
no flags
Merge (5.21 KB, patch)
2012-04-04 09:00 PDT, Peter Rybin
no flags
Add missing specialization (5.57 KB, patch)
2012-04-04 09:25 PDT, Peter Rybin
no flags
rebase (5.79 KB, patch)
2012-04-04 10:49 PDT, Peter Rybin
no flags
Peter Rybin
Comment 1 2012-04-03 14:20:59 PDT
Yury Semikhatsky
Comment 2 2012-04-04 05:39:37 PDT
bj/third_party/WebKit/Source/WebCore/inspector/webcore_remaining.InspectorProfilerAgent.o In file included from gen/webkit/InspectorBackendDispatcher.h:12, from ../../third_party/WebKit/Source/WebCore/inspector/InspectorBaseAgent.h:34, from ../../third_party/WebKit/Source/WebCore/inspector/InspectorProfilerAgent.h:35, from ../../third_party/WebKit/Source/WebCore/inspector/InspectorProfilerAgent.cpp:34: gen/webkit/InspectorTypeBuilder.h: In instantiation of 'WebCore::TypeBuilder::ArrayItemHelper<WebCore::InspectorObject>': gen/webkit/InspectorTypeBuilder.h:62: instantiated from 'void WebCore::TypeBuilder::Array<T>::addItem(WTF::PassRefPtr<T>) [with T = WebCore::InspectorObject]' ../../third_party/WebKit/Source/WebCore/inspector/InspectorProfilerAgent.cpp:249: instantiated from here gen/webkit/InspectorTypeBuilder.h:51: error: no type named 'ItemTraits' in 'class WebCore::InspectorObject'
Peter Rybin
Comment 3 2012-04-04 09:00:48 PDT
Early Warning System Bot
Comment 4 2012-04-04 09:18:40 PDT
Peter Rybin
Comment 5 2012-04-04 09:25:34 PDT
Created attachment 135609 [details] Add missing specialization
Peter Rybin
Comment 6 2012-04-04 10:49:55 PDT
WebKit Review Bot
Comment 7 2012-04-05 06:25:19 PDT
Comment on attachment 135625 [details] rebase Clearing flags on attachment: 135625 Committed r113318: <http://trac.webkit.org/changeset/113318>
WebKit Review Bot
Comment 8 2012-04-05 06:25:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.