Web Inspector: CodeGeneratorInspector.py: switch FileSystem, Profiler and Worker domains to typed API https://bugs.webkit.org/show_bug.cgi?id=83069

Patch by Peter Rybin <peter.rybin@gmail.com> on 2012-04-05
Reviewed by Yury Semikhatsky.

Domains are switched to 'strict' mode. However, hardly any changes were needed in C++ code because
only basic types are currently used in Inspector.json.

* inspector/CodeGeneratorInspector.py:
* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::getProfileHeaders):
(WebCore):
(WebCore::InspectorProfilerAgent::getObjectByHeapObjectId):
* inspector/InspectorProfilerAgent.h:
(InspectorProfilerAgent):

Canonical link: https://commits.webkit.org/100654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113318 268f45cc-cd09-0410-ab3c-d52691b4dbfc